--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <main>
     <div class="box">
       <h1>Lab 4</h1>
-      <p>By, Owen McManus</p>
+      <p>By, Owen McManus (test)</p>
       <div id="canvas-parent"></div>
       <p>Can you find the hidden [TODO]?</p>
     </div>
